--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,5 @@
+resolver 1.1.1.1 ipv6=off;
+
 events {}
 
 http {
@@ -6,7 +8,7 @@ http {
 
     location / {
       proxy_pass https://dan-jemini.app.n8n.cloud/webhook/dc3ee59d-b944-4e98-84a3-62ec583d63be/chat;
-      proxy_set_header Host $host;
+      proxy_set_header Host dan-jemini.app.n8n.cloud;  # 👈 this fixes the 421 error
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
